--- a/expenseTracker/public/index.html
+++ b/expenseTracker/public/index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker - Login</title>
     <link rel="stylesheet" href="style.css"> 
-
+</head>
 <body>
+
     <h1>Expense Tracker Login</h1>
 
-  <form id="loginForm">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Login</button>
-    </form>
+    <div id="loginFormDiv">
+        <!-- Login Form -->
+        <form id="loginForm">
+            <input type="text" id="username" placeholder="Username" required autocomplete="username">
+            <input type="password" id="password" placeholder="Password" required autocomplete="current-password">
+            <button type="submit">Login</button>
+        </form>
+        <p id="loginResponse"></p>
+        <button id="goToRegister">Go to Register</button>
+    </div>
+
+    <!-- Register Form -->
+    <div id="registerFormDiv" style="display:none;">
+        <h2>Register</h2>
+        <form id="registerForm">
+            <input type="email" id="email" placeholder="Email" required><br><br>
+            <input type="text" id="regUsername" placeholder="Username" required autocomplete="username"><br><br>
+            <input type="password" id="regPassword" placeholder="Password" required autocomplete="new-password"><br><br>
+            <input type="password" id="passwordConfirm" placeholder="Confirm Password" required autocomplete="new-password"><br><br>
+            <button type="submit">Register</button>
+        </form>
+        <p id="registerResponse"></p>
+        <button id="goToLogin">Go to Login</button>
+    </div>
+
+    <br><br>
+
+    <div id="responseDiv"></div> 
 
     <h1>Protected Route</h1>
     <button id="accessHello">Access Protected Route</button>
