--- a/preferred/public/index.html
+++ b/preferred/public/index.html
@@ -23,6 +23,6 @@
 
 <p id="response"></p>
 
-<script src="expenses.js"></script>
+<script type="module" src="expenses.js"></script>
 </body>
 </html>
