--- a/preferred/public/expenses.html
+++ b/preferred/public/expenses.html
@@ -16,12 +16,40 @@
     <button type="submit">Add Expense</button>
   </form>
 
+<!-- Filter section -->
+<!-- <div id="filters">
+  <input type="text" id="filterCategory" placeholder="Category">
+  <input type="date" id="filterStartDate">
+  <input type="date" id="filterEndDate">
+  <button type="button" id="applyFilter">Apply Filter</button>
+</div> -->
+<div id="filters">
+  <select id="filterCategory">
+    <option value="">All Categories</option>
+    <option value="Entertainment">Entertainment</option>
+    <option value="Utilities">Utilities</option>
+    <option value="Food">Food</option>
+    <option value="Transport">Transport</option>
+    <!-- Add more categories as needed -->
+  </select>
+  <input type="date" id="filterStartDate">
+  <input type="date" id="filterEndDate">
+  <button type="button" id="applyFilter">Apply Filter</button>
+</div>
+
+
   <ul id="expensesList"></ul>
   <p id="response"></p>
 
   <button id="logoutBtn">Logout</button>
 
+
+  <!-- Summary section -->
+<div id="summary"></div>
+
+
   <!-- Link to JS -->
-  <script src="expenses.js"></script>
+ <script type="module" src="expenses.js"></script>
+
 </body>
 </html>
